--- a/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
@@ -1,13 +1,14 @@
 alertmanager:
     config:
         receivers:
-            - name: ENC[AES256_GCM,data:7KP5vA==,iv:Dykhglxzj1pFQXGYOHc+ZzqhVrkAdamzgGqVUecfteA=,tag:geyBSwr12sI3rUsZb9daIA==,type:str]
-            - name: ENC[AES256_GCM,data:G6+CAuU=,iv:T6KnZCu13ycyCWEQp1RzpsP/3I5BoluV3xkD+91ClK0=,tag:tnI9qiWQOIKD43tJKXj7gQ==,type:str]
+            - name: ENC[AES256_GCM,data:ws608Q==,iv:8+/nSaJ2UNT8XbZrEKuY+Bj5psCyE+5iTVbOC+8nr6k=,tag:JM2bJEoybEF4/hY60eAoRA==,type:str]
+            - name: ENC[AES256_GCM,data:G10S16w=,iv:8rJqAfQus1BX8/WsO/g+hbqMIJwqmhRmif0iFA5hrYk=,tag:EaUCHsD0iPX2J5A+F1ofqw==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:VPdWacvouxhFb6TGvCOijmRXnVCbszPusA==,iv:VsWOo/h7esTKsuRRW69j1K8Aw5R3ZAZ1UjI3Jj+v15g=,tag:RKSm8LKit856979HcVj0Bw==,type:str]
-                  from: ENC[AES256_GCM,data:rDD/0pXy+meSHUZkGcY=,iv:9p+q2zxjkDAuHxOvg/fnHT3rXdWLztesvt/KvevHE78=,tag:qsLj+/1HtcQspKHkX7pKiA==,type:str]
-                  smarthost: ENC[AES256_GCM,data:JNF4uMkCTKkq/zfOdlMVZpmNjrlEHvbwQtqQD831IA==,iv:QtCnzPDHe3pBtxjufVTqBo2yDzXM6H6VnUbCfCPRmPU=,tag:yam5Ib4pQIqU3fDcOP9L3A==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:YjTDaQ==,iv:W3mN8gPOOj/KTNJqGpS25K39rInJi/JG/DnVcA5E3Ns=,tag:vJaVTxh/F731SDhrEUiLXA==,type:bool]
+                - to: ENC[AES256_GCM,data:20nlgPbhePQm8k1v2I4sb6D+TPXhIysFIw==,iv:76sYAviZ4l1tdolpLvtqCGd2Q0+3w7N6f03l4rJQIqk=,tag:IsUrkNal+bUypbFPQoeapA==,type:str]
+                  from: ENC[AES256_GCM,data:AcaGHrZcYJAiTmRbo0g=,iv:TKYhTm9yHPL2uGASR6IGx+KEaD0JvyoIfP+JMeSVby8=,tag:QFrDPYutpgFIGaQPv9IwRw==,type:str]
+                  helo: ENC[AES256_GCM,data:Ve6eB6uuxuAn7U48VEPosdgNzC4w,iv:2bYKpVr0fqGqI0Bj7BSH4NP7OzRTleXrVWzItf/K9W0=,tag:alVKPrGi+5eyCSc9guXUGw==,type:str]
+                  smarthost: ENC[AES256_GCM,data:/9sM4kpOWiCrvRP5C2BJ+666NHg0QD04knBCifT3KQ==,iv:QBsumtSmjXIPZLNbSJMQed2Q6QDMf3Qgs4WZvo5qgyk=,tag:uOYM6CMPbgrRhXqttsvbHQ==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:g97Q1A==,iv:59+Syw2b/3wPAPjDvxWHHjCRGrVBYCEG2Hb2T9oX8WU=,tag:2/hEwYKWaxLawVOQHGe/cw==,type:bool]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +18,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVZW1TRVMxbTAxalAwYVYy
-            RnVwUnBIMUVnYnRwR1FUekhGK2RPT1lBRkY0CnZ4NVpIb2NwVkFIQ1FseU1Uc2ls
-            eGZMOXBJOTZlMEdpOXlJMmFCcjFkMG8KLS0tIHF3SlFCR3NtcG1Qc0Q0eFI5L040
-            ckp5L0ZWcTJGSmoyMHljU3QzQmhSV3cKb7MVBifckYOsI0LnwZkup/cswqwYsPTA
-            5fzDt+Xc9OGLKS1X9WnkSEbuxVG/9QbAAI0kocN5OlK9IXEBcvpBYg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqcmRIMGVGU2V5MmlZSG0z
+            KzBpa3FkeE53V0liMWw2WVBVUEUycU1HTVVFCm15THJ6d2lLRHk4ZTZlbzNWQncr
+            VHFPazlGRVlqL1NyUjRsRk5JZ3BFZzAKLS0tIEtHWmJTZHRZTzBTUGtJdlg2RjFH
+            N3dJNHlSOG5abFY1cHRYL2RIRjBqYzAKixey6aKaJcwRVxHZtUuxde+GnvW5DJCK
+            5L2FCeIPGTkN0RaO2w11yKydTOI5HSenz4rkBOjvdSdXT3SJ7kPqGg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-11-19T14:15:07Z"
-    mac: ENC[AES256_GCM,data:B729SIJI6wWV0OvFcKPd6ZBqrV7JNh84z4piLwOQHPo47NSKu4KUTOGLwMXXQcvQyakC6TATOILmxC4OTTZ/PtCiQQ8vM6ZuHzLc8OAi7Ws6E8mGUhO8WVchi60MRpYKUbta0wwojmmuXZJ/pmaJVHadvlgKHdRY+lIJyWvs0W8=,iv:5o66TPwg+5g2gxuEBlBze0QCHrLoPxEaDypAKd8QzSs=,tag:DjaGHoyoPt5CuypMYdY08Q==,type:str]
+    lastmodified: "2022-11-19T14:32:23Z"
+    mac: ENC[AES256_GCM,data:nX4PH0PjPGxQr1h2EJPyYVk0IxY+B1L/SGtUQNqdq0LpxI29TR7Q69OyTbFR7HBJBdkbAyrXr5NMOQjFVaYw01eiosWVX9e8ir+H+hn+tWf76AlmcN+E+ltfeqwja1emvfNZFDDxLs5FHDbNwFdL2UlzZv9jr+b0MmMg94aTGxM=,iv:4N8nNrqAG20SxoNqmN/BmJV2kinE8fPiNj2lTbFeEQs=,tag:43/8P7MoVRL7WQpwnNVQMg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
