set alertmanger implementation

--- a/clusters/production/monitoring/grafana/helm.yaml
+++ b/clusters/production/monitoring/grafana/helm.yaml
@@ -60,6 +60,8 @@ spec:
             type: alertmanager
             access: proxy
             url: http://alertmanager-operated.monitoring.svc.cluster.local:9093
+            jsonData:
+              implementation: prometheus
           - name: Prometheus
             type: prometheus
             access: proxy
