--- a/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: monitoring
 resources:
   - helm.yaml
+  - rules/kured.yaml
 secretGenerator:
   - name: prometheus-values
     files:
