use nfs for loki

--- a/clusters/production/monitoring/loki/helm.yaml
+++ b/clusters/production/monitoring/loki/helm.yaml
@@ -121,6 +121,7 @@ spec:
     write:
       replicas: 3
       persistence:
+        storageClass: nfs-client
         size: 10Gi
     read:
       replicas: 3
@@ -139,6 +140,7 @@ spec:
         - name: loki-tmp
           emptyDir: {}
       persistence:
+        storageClass: nfs-client
         size: 10Gi
     monitoring:
       dashboards:
