--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -15,6 +15,7 @@ spec:
         name: prometheus-community-charts
         namespace: flux-system
   install:
+    crds: CreateReplace
     createNamespace: true
     remediation:
       retries: 5
