try fixing alertmgr

--- a/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
@@ -1,14 +1,13 @@
 alertmanager:
     config:
         receivers:
-            - name: ENC[AES256_GCM,data:ws608Q==,iv:8+/nSaJ2UNT8XbZrEKuY+Bj5psCyE+5iTVbOC+8nr6k=,tag:JM2bJEoybEF4/hY60eAoRA==,type:str]
-            - name: ENC[AES256_GCM,data:G10S16w=,iv:8rJqAfQus1BX8/WsO/g+hbqMIJwqmhRmif0iFA5hrYk=,tag:EaUCHsD0iPX2J5A+F1ofqw==,type:str]
+            - name: ENC[AES256_GCM,data:l9Ke9g==,iv:/ehR/rUXs78R3FcXCqvYGpwGCLlPowc8CGT9ejwa+Yc=,tag:9L7HjrnNkV9dV7eyUl4FFw==,type:str]
+            - name: ENC[AES256_GCM,data:4zXKYO0=,iv:nTbVDTtNi2V+fOnE/5bA2idNgeZfc1I62HxV3bzJYWk=,tag:jzFN2lddgXmFsqyWbwoYsw==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:20nlgPbhePQm8k1v2I4sb6D+TPXhIysFIw==,iv:76sYAviZ4l1tdolpLvtqCGd2Q0+3w7N6f03l4rJQIqk=,tag:IsUrkNal+bUypbFPQoeapA==,type:str]
-                  from: ENC[AES256_GCM,data:AcaGHrZcYJAiTmRbo0g=,iv:TKYhTm9yHPL2uGASR6IGx+KEaD0JvyoIfP+JMeSVby8=,tag:QFrDPYutpgFIGaQPv9IwRw==,type:str]
-                  helo: ENC[AES256_GCM,data:Ve6eB6uuxuAn7U48VEPosdgNzC4w,iv:2bYKpVr0fqGqI0Bj7BSH4NP7OzRTleXrVWzItf/K9W0=,tag:alVKPrGi+5eyCSc9guXUGw==,type:str]
-                  smarthost: ENC[AES256_GCM,data:/9sM4kpOWiCrvRP5C2BJ+666NHg0QD04knBCifT3KQ==,iv:QBsumtSmjXIPZLNbSJMQed2Q6QDMf3Qgs4WZvo5qgyk=,tag:uOYM6CMPbgrRhXqttsvbHQ==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:g97Q1A==,iv:59+Syw2b/3wPAPjDvxWHHjCRGrVBYCEG2Hb2T9oX8WU=,tag:2/hEwYKWaxLawVOQHGe/cw==,type:bool]
+                - to: ENC[AES256_GCM,data:OLYHLWLL+FT6PHiSe1IlDosr17tMYQP3Lw==,iv:DC1JF0O/xJ8ftYr5vSC5mPhy0fBxilyuW+5bM6xmHwI=,tag:GBKwMcyWsr6ZNTqjKzEe6g==,type:str]
+                  from: ENC[AES256_GCM,data:sgKVBZTvJLJ//3nVhps=,iv:OlTlcPBzX50cI8tY97zdCv9gI1zfZzosUSQeyKxPlHw=,tag:jjXVa/vK6YakMqS5jPfCYw==,type:str]
+                  smarthost: ENC[AES256_GCM,data:f105QthsyRycCEx/t8UcuvBf6G/X846Q6lJH9MdZxQ==,iv:SUe9S8OQ6mPEoPTk4oCz0DMJqwQAqtRvWvJ50pgS6QU=,tag:eMNMb99W2TZdKjVEuc+FFg==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:FUrjxQ==,iv:njmb92+I1C4Rk+n5i0zQWBHuug4lTqUS5z0ECmaKE3E=,tag:9seEso6xtrdGyVOPb5QiJQ==,type:bool]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +17,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqcmRIMGVGU2V5MmlZSG0z
-            KzBpa3FkeE53V0liMWw2WVBVUEUycU1HTVVFCm15THJ6d2lLRHk4ZTZlbzNWQncr
-            VHFPazlGRVlqL1NyUjRsRk5JZ3BFZzAKLS0tIEtHWmJTZHRZTzBTUGtJdlg2RjFH
-            N3dJNHlSOG5abFY1cHRYL2RIRjBqYzAKixey6aKaJcwRVxHZtUuxde+GnvW5DJCK
-            5L2FCeIPGTkN0RaO2w11yKydTOI5HSenz4rkBOjvdSdXT3SJ7kPqGg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnMEFPaklBNnNMdlUyVldy
+            K1gyc2dSZ0twa2RjNUhMbFk4WGY4SS9DeEZNCnFuYW9nOXEyRDcyRW9IYUhwL0dF
+            eC9BaWlEdjJqQ1Vnajg3LzNiYlNFS3MKLS0tIElibU9NVmpwREhvdGZETjBFUGhy
+            a2VJMkR6UVV1R2tSS3JKYlBaeHB3MHcKUK0wOkQiByqmDfsBJ7l2lCOLpV9LnqPa
+            IIM63Mcu++bIeJJVY3plFJVvHRsyVuoy2auH/Xh0oQstzDxDYFurkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-11-19T14:32:23Z"
-    mac: ENC[AES256_GCM,data:nX4PH0PjPGxQr1h2EJPyYVk0IxY+B1L/SGtUQNqdq0LpxI29TR7Q69OyTbFR7HBJBdkbAyrXr5NMOQjFVaYw01eiosWVX9e8ir+H+hn+tWf76AlmcN+E+ltfeqwja1emvfNZFDDxLs5FHDbNwFdL2UlzZv9jr+b0MmMg94aTGxM=,iv:4N8nNrqAG20SxoNqmN/BmJV2kinE8fPiNj2lTbFeEQs=,tag:43/8P7MoVRL7WQpwnNVQMg==,type:str]
+    lastmodified: "2022-12-21T11:00:09Z"
+    mac: ENC[AES256_GCM,data:XoOB5vogALaWR1s7my8DGgpwBdjGAsUThxx6ooicGyuC0yT4UlxuZdmGrTuUY/YA0pioly5vib3s8pJozbGFh29gTAij5UMqXxk4EvZAJQHEgw73SJtd+EXF5jT7GjehUkcbaqzE2noCaz+oLGXPYtwh5bwIw/2kpD1rHmXkleg=,iv:91qnEDWR5qC5bHOWyheXD3lT3fmXrHnXy9Cm0Cb8o1w=,tag:niY+gp3fv+yq11Jfkg+Dog==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
