--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -53,27 +53,12 @@ spec:
           source: |
             # Standardize 'app' index
             .custom_app_name = .pod_labels."app.kubernetes.io/name" || .pod_labels.app || .pod_labels."k8s-app" || "unknown"
-
-        kubernetes_logs_portal:
-          type: filter
-          inputs:
-            - kubernetes_logs_remap
-          condition: .kubernetes.pod_namespace == "portal"
-        kubernetes_logs_portal_remap:
-          type: remap
-          drop_on_error: true
-          reroute_dropped: true
-          inputs:
-            - kubernetes_logs_portal
-          source: |
-            # Try to extract JSON Message
-            .message = parse_json!(.message)
-
+  
         kubernetes_logs_other:
           type: filter
           inputs:
             - kubernetes_logs_remap
-          condition: .kubernetes.pod_namespace != "portal" && .container_name != "loki-canary"
+          condition: .container_name != "loki-canary"
         kubernetes_logs_canary:
           type: filter
           inputs:
@@ -113,12 +98,10 @@ spec:
         loki_kubernetes:
           type: loki
           inputs:
-            - kubernetes_logs_portal_remap
-            - kubernetes_logs_portal_remap.dropped
             - kubernetes_logs_other
           endpoint: http://loki-gateway:80
           encoding:
-            codec: json
+            codec: text
           batch:
             max_bytes: 2049000
           out_of_order_action: accept
