--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -110,6 +110,8 @@ spec:
           labels:
             app: >-
               {{`{{ custom_app_name }}`}}
+            container_name: >-
+              {{`{{ kubernetes.container_name }}`}}
             namespace: >-
               {{`{{ kubernetes.pod_namespace }}`}}
             node: >-
