rename container field

--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -110,7 +110,7 @@ spec:
           labels:
             app: >-
               {{`{{ custom_app_name }}`}}
-            container_name: >-
+            container: >-
               {{`{{ kubernetes.container_name }}`}}
             namespace: >-
               {{`{{ kubernetes.pod_namespace }}`}}
