--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 clusters/production/minio/values.yaml
 clusters/production/monitoring/grafana/secrets.yaml
 clusters/production/monitoring/kube-prometheus-stack/values.yaml
+clusters/production/gitlab-runner/secrets.yaml
