fix: add missing runner token

--- a/clusters/production/gitlab-runner/secrets.sops.yaml
+++ b/clusters/production/gitlab-runner/secrets.sops.yaml
@@ -4,7 +4,8 @@ metadata:
     name: gitlab-runner-secret
     namespace: gitlab-runner
 stringData:
-    runner-registration-token: ENC[AES256_GCM,data:fN7wnEJAx/pVIntMU+Lqd1LASewu5FBrdVWovt4=,iv:Zi4DIug4b3jwTgw+c7DwB6GVd+2C8/YLqzI4HF9BoPs=,tag:r3UVRSATiJAoQIs0fXeTyw==,type:str]
+    runner-registration-token: ENC[AES256_GCM,data:srqrgDOMdWJ/szKBju1TrGj12jRLJnaA3jOYrcE=,iv:yS5Ab+v8AnHsx9b9uI3DjJROXL6aEeEI6ClwiPDD15I=,tag:1dLy93upYhYDnu3Rqrxm0Q==,type:str]
+    runner-token: ""
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +15,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuRU9zKzZPc2tOU2o2TXFl
-            T2pFYm5ESm15ckZENERFOFVYYkFKR0NScnk0Ck5qSVIvTXpINGhyS2JKb1NGWXpS
-            dWRkNGthME5HYWtTVEJkaWdNemFybWcKLS0tIHNtNm1IcHRnRHpiaWo1RTZQYmxo
-            SGdqU2h0cDk1bi9DYXJkeFowMHFYa3cKPM7ro91wCR8+X5MPsEWScGpzSZunBQ+P
-            O+5vVBybJW0c9DBoftCPc4YVx5KNH+Ms9ZdhwaCAGOEc4e6qyiZHQQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwWjF0K2tteHpLMmpya0Ft
+            OE9YM0ZFenJhY3JTbkxQWE5vNnJIUER4bzIwCk1VOWJnWGYyb0EvSjJNTTlkb0pW
+            NTdONHdUWEthRGJSTXZlYTNiYloxdDgKLS0tIGdER2JRYk9hSEdqeTYvc2FJUkxQ
+            dEl4RUYzdnNJd3R6SVA5aU96TW1rUlkKJDCFZxr3n1rBL3Ij1/2Gsqx3LrB4gVD8
+            E6mAkN+1OSEL1KtIFoEWz6+LJsRAZqSx4GLovZpAEs7SpxmnrOIYHg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-29T05:11:14Z"
-    mac: ENC[AES256_GCM,data:ziGTzaqNie/e3cV/JViCFumGVmT8XTnbecy+/54uJbPvHf0lDTaYzIWAZ/0TtqCFCFMyGB9aeZqjufyK+jFmHD84wecxH/wX3PB64spgTsVOknEmv7ceFlQdwqS0UxdM2TefOdLx9VOrquUBG12sq7GI/xhFpYN+cBDNL1R5Nvs=,iv:xsqc39BTcwDPb0BiDuImVRJtZyOcuIg8eq/4g1wpGkA=,tag:VYvFVyY1y0+pqOfMadBUJw==,type:str]
+    lastmodified: "2022-12-29T05:21:59Z"
+    mac: ENC[AES256_GCM,data:phKrkBCpHRNd3SNz7uioSb/7fGGbrYryDkANg5Ow497NfExXpSKNVuY3O1NWSrMFA4rRhialzjLAYnaRzbPXsoL5Tbs3ilC7ubzO2ZV8eGEA30Dp2ZsBl69OD7QGvUAYrF5osaVEPUEIVLydgbnIIICauIGnBviUegvuNk4Om5o=,iv:6QMKLD53UruTzUk+kpzYn8WE9s0avZv8VjIDNH+OUYw=,tag:ZtkO6yNfphXIbo05CrbZjQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
