--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -117,17 +117,27 @@ spec:
         serviceMonitorSelectorNilUsesHelmValues: false
         podMonitorSelectorNilUsesHelmValues: false
         probeSelectorNilUsesHelmValues: false
-        retention: 14d
-        retentionSize: 13GB
+        retention: 30d
+        retentionSize: 50GB
         enableAdminAPI: true
         walCompression: true
+        additionalScrapeConfigs:
+          - job_name: "node-exporter"
+            scrape_interval: 15s
+            static_configs:
+              - targets:
+                  - "pve01.cc.private.hm.edu:9100"
+                  - "pve02.cc.private.hm.edu:9100"
+                  - "pve03.cc.private.hm.edu:9100"
+                  - "pve04.cc.private.hm.edu:9100"
+                  - "pve05.cc.private.hm.edu:9100"
         storageSpec:
           volumeClaimTemplate:
             spec:
               storageClassName: nfs-client
               resources:
                 requests:
-                  storage: 15Gi
+                  storage: 100Gi
         resources:
           requests:
             cpu: 10m
