feat: start adding pve rules

--- a/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: monitoring
 resources:
   - helm.yaml
   - rules/kured.yaml
+  - rules/pve.yaml
 secretGenerator:
   - name: prometheus-values
     files:
