feat: add alerts for outstanding updates

--- a/clusters/production/monitoring/kube-prometheus-stack/rules/pve.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/rules/pve.yaml
@@ -35,3 +35,59 @@ spec:
           annotations:
             title: Bond is degraded on {{ $labels.instance }}
             description: Bond {{ $labels.master }} is degraded on {{ $labels.instance }}
+        - alert: Proxmox Updates Outstanding
+          expr: apt_upgrades_pending{origin="Proxmox:bullseye/stable"} != 0
+          for: 1m
+          labels:
+            severity: info
+          annotations:
+            title: Proxmox Updates Outstanding {{ $labels.instance }}
+            description: Proxmox Updates Outstanding for {{ $labels.instance }}
+        - alert: Proxmox Updates Outstanding
+          expr: apt_upgrades_pending{origin="Proxmox:bullseye/stable"} != 0
+          for: 96h
+          labels:
+            severity: warning
+          annotations:
+            title: Proxmox Updates Outstanding {{ $labels.instance }}
+            description: Proxmox Updates Outstanding for {{ $labels.instance }}
+        - alert: Security Updates Outstanding
+          expr: apt_upgrades_pending{origin="Debian:bullseye-security/stable-security"} != 0
+          for: 1m
+          labels:
+            severity: critical
+          annotations:
+            title: Security Updates Outstanding {{ $labels.instance }}
+            description: Security Updates Outstanding for {{ $labels.instance }}
+        - alert: Normal Updates Outstanding
+          expr: apt_upgrades_pending{origin!~"Proxmox:bullseye/stable|Debian:bullseye-security/stable-security"} != 0
+          for: 1m
+          labels:
+            severity: warning
+          annotations:
+            title: Normal Updates Outstanding {{ $labels.instance }}
+            description: Normal Updates Outstanding for {{ $labels.instance }}
+        - alert: Reboot required
+          expr: (reboot_required) != 0
+          for: 1m
+          labels:
+            severity: info
+          annotations:
+            title: Reboot required for {{ $labels.instance }}
+            description: Reboot required for {{ $labels.instance }} due to kernel update
+        - alert: Reboot required
+          expr: (reboot_required) != 0
+          for: 48h
+          labels:
+            severity: warning
+          annotations:
+            title: Reboot required for {{ $labels.instance }}
+            description: Reboot required for {{ $labels.instance }} since more than 48h due to kernel update
+        - alert: Reboot required
+          expr: (reboot_required) != 0
+          for: 96h
+          labels:
+            severity: critical
+          annotations:
+            title: Reboot required for {{ $labels.instance }}
+            description: Reboot required for {{ $labels.instance }} since more than 96h due to kernel update
