--- a/clusters/production/istio/istio-services.yaml
+++ b/clusters/production/istio/istio-services.yaml
@@ -139,3 +139,20 @@ spec:
             host: grafana
             port:
               number: 80
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: meet
+  namespace: meet
+spec:
+  hosts:
+    - meet.hm.edu
+  gateways:
+    - istio-ingress/gateway-portal
+  http:
+    - route:
+        - destination:
+            host: meet
+            port:
+              number: 80
