feat: add new host

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -132,6 +132,7 @@ spec:
                   - "pve04.cc.private.hm.edu:9100"
                   - "pve05.cc.private.hm.edu:9100"
                   - "pve06.cc.private.hm.edu:9100"
+                  - "mailarchiv.hm.edu:9100"
         storageSpec:
           volumeClaimTemplate:
             spec:
