feat: add new host

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -136,6 +136,7 @@ spec:
                   - "api.hm.edu:9100"
                   - "storage.k8s.cc.private.hm.edu:9100"
                   - "sentry.hm.edu:9100"
+                  - "git.cc.private.hm.edu:9100"
         storageSpec:
           volumeClaimTemplate:
             spec:
