feat: disable integrated node_exporter & use own

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -28,6 +28,8 @@ spec:
     - kind: Secret
       name: prometheus-values
   values:
+    nodeExporter:
+      enabled: false
     alertmanager:
       config:
         global:
