--- a/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
@@ -1,13 +1,36 @@
 alertmanager:
     config:
         receivers:
-            - name: ENC[AES256_GCM,data:l9Ke9g==,iv:/ehR/rUXs78R3FcXCqvYGpwGCLlPowc8CGT9ejwa+Yc=,tag:9L7HjrnNkV9dV7eyUl4FFw==,type:str]
-            - name: ENC[AES256_GCM,data:4zXKYO0=,iv:nTbVDTtNi2V+fOnE/5bA2idNgeZfc1I62HxV3bzJYWk=,tag:jzFN2lddgXmFsqyWbwoYsw==,type:str]
+            - name: ENC[AES256_GCM,data:8D+xhw==,iv:OYgtqifK412N3Brr4H0Qm32ljFdjtzHZFa5Ol+I6DUM=,tag:hIbJE5eQz9Cj3P/wiVzxnA==,type:str]
+            - name: ENC[AES256_GCM,data:rwOTk+0=,iv:DQ8vZPctrEUOZ2dHB64lxl/PdBQlt5ZCXNHZs2SgiBA=,tag:7HQQHB4K5onee6qAtgleog==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:OLYHLWLL+FT6PHiSe1IlDosr17tMYQP3Lw==,iv:DC1JF0O/xJ8ftYr5vSC5mPhy0fBxilyuW+5bM6xmHwI=,tag:GBKwMcyWsr6ZNTqjKzEe6g==,type:str]
-                  from: ENC[AES256_GCM,data:sgKVBZTvJLJ//3nVhps=,iv:OlTlcPBzX50cI8tY97zdCv9gI1zfZzosUSQeyKxPlHw=,tag:jjXVa/vK6YakMqS5jPfCYw==,type:str]
-                  smarthost: ENC[AES256_GCM,data:f105QthsyRycCEx/t8UcuvBf6G/X846Q6lJH9MdZxQ==,iv:SUe9S8OQ6mPEoPTk4oCz0DMJqwQAqtRvWvJ50pgS6QU=,tag:eMNMb99W2TZdKjVEuc+FFg==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:FUrjxQ==,iv:njmb92+I1C4Rk+n5i0zQWBHuug4lTqUS5z0ECmaKE3E=,tag:9seEso6xtrdGyVOPb5QiJQ==,type:bool]
+                - to: ENC[AES256_GCM,data:PJxVYiPrAp8fYRT+/1Vg4kv2i72fKA/Akw==,iv:8ahr6dISPjNidJAw9T793teFO66UyZEWnHntwENAuVU=,tag:cilN+6ZBe4IdzdYeBL2L2g==,type:str]
+                  from: ENC[AES256_GCM,data:brSoYtpEa2m0WFB0u30=,iv:J89td4Kh8n3WL6RHOIDm/BzvLNQ9Bnwtg8hdpCN4lgI=,tag:qIaB11fJrIDb5845lIPYsQ==,type:str]
+                  smarthost: ENC[AES256_GCM,data:EXAs38ZWAqTnKxxCfJ5oDL2iD8R2PjQy8gouY4HByg==,iv:BnwTHt0SDco2IUnZn0iS2Uim6CHgM7ghl6Niy3fZyC4=,tag:PtYcJfIInF4wyc76Ies5DA==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:uFXCkg==,iv:OvwPPnnPkGxWQJuNS6xalxwvdNOcm0o9E0OBJTLCU8s=,tag:mdYCGF7oME4VX1dmUJIaIQ==,type:bool]
+prometheus:
+    prometheusSpec:
+        additionalScrapeConfigs:
+            - job_name: ENC[AES256_GCM,data:eDHg8yXyP/fAIJRedw==,iv:KcHRpTTgxlv5JnjB2j7HQ4mSvwZG3rzW8H9OwxYKC7w=,tag:1FigyYBGdQpWf7j5sdCJHw==,type:str]
+              scrape_interval: ENC[AES256_GCM,data:DtqZ,iv:09CjijguWQ2niYHuxue68CLfgxooUfA9spysFkaMljU=,tag:gOOHfeZnm2ucEwUIZs63Gg==,type:str]
+              static_configs:
+                - targets:
+                    - ENC[AES256_GCM,data:7Tu7NMSHVI7XSoUJOnQhDSOTmuKCSHyTIZKtF1htHRjN,iv:UL42GDW3+IuTe2ijamJxu02mIRdqCuAByCe0ycLdP04=,tag:oOp/z1x5QjpnX7lzXYZFng==,type:str]
+                    - ENC[AES256_GCM,data:1uobwlWcrgoaVsmB/eVciwujzc92/seb4sULAVEbP/Iu,iv:PMUf4TQHX6NYVoC1lyAJrcbG+zYWmASuNk8CnZDuYLw=,tag:BhGuCnRFnkvtec/j2y4MyQ==,type:str]
+                    - ENC[AES256_GCM,data:2QyZ2AXg4tRLoOKFebN65Ba8rEsNoQrSCZ/GBtIlxo09,iv:XVnx22aews/qgE2Efhlhn7sCPcf+QbhdUheDnKwLhPs=,tag:7KCuBI2xa4x0uSM3bpcrTQ==,type:str]
+                    - ENC[AES256_GCM,data:jvAXmYT/6iKfMaD+bOIj+swWJOsAgoMRezn5rML0d/q1,iv:72qTddUPX+s3TVWnL24/GS5yTkGLbFc1tvNCoXnVmfg=,tag:dNndkB4Ka6khhAjF/2U1Mg==,type:str]
+                    - ENC[AES256_GCM,data:ehFRD5YoHKstR0qNYgYHpOiYvV08cHKPfLVVUNwYcaXt,iv:jWNz/kNvthxv4oeNFWh5KWdi+ZV1ly9ADRTayqOoCSA=,tag:UunlvGIOHSprIoawSswtGA==,type:str]
+                    - ENC[AES256_GCM,data:iGnHXKHdhrHC8tt7dBFyAqOmJPkn8HlJIv7Big==,iv:Na2VejtR+r+nUVEoEHlXhgM6/BU4aJnpTXP1npXSZXc=,tag:2Ayp+GO4waJzwHdDQgI8PA==,type:str]
+                    - ENC[AES256_GCM,data:U9fCRVAu/LQH2DNG+fdvrK39Mhkn7ID4HHMp2g==,iv:78FOp/VVDs1eVmGsyP/n9Jj8HyzY8xaRTOHk4jO0XFw=,tag:4XhjduoXCR5QAxT4ZUiwpw==,type:str]
+                    - ENC[AES256_GCM,data:JbmuAJf81g1zkx03Vuc30TamlBKvr/1d4k7p0A==,iv:KkjSdhAi5zhtF1CaMEjYYg/3vlDnz+/YiTWcnko5N+0=,tag:r5iPtR48dWfYC6w7KFHUSA==,type:str]
+                    - ENC[AES256_GCM,data:3QlkpcAJuimOhZ0ivpqpOqw+RbKkntx3qNz7Hg==,iv:hbVpBxbJ14lX+1+rM7jqQtYh0qRoasW83TZzSv4Nc30=,tag:bYG/VsaupwGGT/5JDtCDvg==,type:str]
+                    - ENC[AES256_GCM,data:8vAK3uURP/Xt5DsA5v/eO9rEY0+0Q1zwEFecAQ==,iv:TTP4/DSGetf//pOn/wqTRcos1lJ33qAhHO3CK6JZAA4=,tag:RszXXrg19y8w+KbtL/Srrg==,type:str]
+                    - ENC[AES256_GCM,data:ooDRvl4p5XklzyBkNhdBvw7JJhXaYLAaxqBNkw==,iv:P69Izx6UMPfWj4ZtBO/O8YJfz70uI8BmEZzQere8UeY=,tag:HyJJFCuixRzJWjXmJA6t5A==,type:str]
+                    - ENC[AES256_GCM,data:tO91jAP6oegm/tB306VwPoz/jDhQ5g==,iv:4yCu22khjGnsWclvoE17mqWTmx+CMEYIOkgdCOjNSn8=,tag:XqAs4xKiOIK708zcly9g9g==,type:str]
+                    - ENC[AES256_GCM,data:/SHU6ejqXP11VWlco6ge,iv:LFuNWkPD5n3e8oCaTPQuBW4eIF40C+/vrJtStaGk+xc=,tag:uVPYVVGU03M0AzvhrpMkRg==,type:str]
+                    - ENC[AES256_GCM,data:W2Gli3sEkrM9MG0vQx28VhY4XEKXnF2BL0iyivSYpJ6blw==,iv:ryTTRYoXZYrjqdYKn/98xC8krtNvsE0/vMXinuTuJiA=,tag:zF69j3pJlASLx3uxXven3w==,type:str]
+                    - ENC[AES256_GCM,data:6Zsdh9HkcTB8SyuCuDdhM5Ju,iv:NIKPWRhSNY4SPxdUT9Sj6+0wLFuy6BOf6/DozdwdTKE=,tag:9iL4yESUEFpeFbpVCVSs1Q==,type:str]
+                    - ENC[AES256_GCM,data:eSA2rNf2bn+mP6JDKUlk9wG8Rh1hSwWalGQ=,iv:89RTdNHEiAWFJcpo0Y7NsCyT6OgFEJpitqPIAcHo/6s=,tag:RB+Fd9uNh/4hoWLpWJs9Kw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +40,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnMEFPaklBNnNMdlUyVldy
-            K1gyc2dSZ0twa2RjNUhMbFk4WGY4SS9DeEZNCnFuYW9nOXEyRDcyRW9IYUhwL0dF
-            eC9BaWlEdjJqQ1Vnajg3LzNiYlNFS3MKLS0tIElibU9NVmpwREhvdGZETjBFUGhy
-            a2VJMkR6UVV1R2tSS3JKYlBaeHB3MHcKUK0wOkQiByqmDfsBJ7l2lCOLpV9LnqPa
-            IIM63Mcu++bIeJJVY3plFJVvHRsyVuoy2auH/Xh0oQstzDxDYFurkw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDeHdNdHROY25iUXVkN0FQ
+            T2l0T2JHazhtT2VoaGJCNVU0WkR2eEdocng4CkUyL1FxZDhrcTBQN3ZRMXJZTmNt
+            Q2xYZkxKbEtQdFdIcXBSMGtqdVBocXMKLS0tIGEvSW1zNVlvYU9xR2lQWXFnMUVU
+            aE1pR2hDYkk5OUord0d2c0kxWGtqY2MK6szrZX4NoA9t3U+wz11YnbxIeRfmeiGy
+            VE4k9NwNFekuTR5trVh9EX/z1U8YroxZwO+MFJo9+D5aoLkMdPQtdA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-21T11:00:09Z"
-    mac: ENC[AES256_GCM,data:XoOB5vogALaWR1s7my8DGgpwBdjGAsUThxx6ooicGyuC0yT4UlxuZdmGrTuUY/YA0pioly5vib3s8pJozbGFh29gTAij5UMqXxk4EvZAJQHEgw73SJtd+EXF5jT7GjehUkcbaqzE2noCaz+oLGXPYtwh5bwIw/2kpD1rHmXkleg=,iv:91qnEDWR5qC5bHOWyheXD3lT3fmXrHnXy9Cm0Cb8o1w=,tag:niY+gp3fv+yq11Jfkg+Dog==,type:str]
+    lastmodified: "2023-01-13T16:14:38Z"
+    mac: ENC[AES256_GCM,data:mEsogSifB7LqZgZt8olNvRU/bpBHmyKN+uZcxais8psw2t/wlrhmWtNO255ZG/Ag5ZuhHzO8M39UxTicsOSLboq7s+MUqvipzB28TcRATcAg7dgmPeUhwAcgx/RmAywHaNFgSAL3dSFNd6rgH7hRLsjW7G3MHxfV6KU7wuRReO8=,iv:J2RAKCWk3nDgBH4WL/h0QDr8nsC5iMkQv1DIKQ6okt0=,tag:ezzcDigsRQ0ngaZY8eyG5Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
