fix: use correct hostnames

--- a/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
@@ -1,36 +1,36 @@
 alertmanager:
     config:
         receivers:
-            - name: ENC[AES256_GCM,data:8D+xhw==,iv:OYgtqifK412N3Brr4H0Qm32ljFdjtzHZFa5Ol+I6DUM=,tag:hIbJE5eQz9Cj3P/wiVzxnA==,type:str]
-            - name: ENC[AES256_GCM,data:rwOTk+0=,iv:DQ8vZPctrEUOZ2dHB64lxl/PdBQlt5ZCXNHZs2SgiBA=,tag:7HQQHB4K5onee6qAtgleog==,type:str]
+            - name: ENC[AES256_GCM,data:ZZIp0g==,iv:NxhhlaBhVU+jexytherxoUCUGNf9n9fI9N9BpgPM9UU=,tag:/CsL/P9UQS/Vgze1tXtXPg==,type:str]
+            - name: ENC[AES256_GCM,data:/jTtY0w=,iv:1TeLZq2vJWJTJpzCLm9QU88nxZl9bDuPzW+7Ebdg4yc=,tag:LFPWPlBOXmdn+H1wyr9yPA==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:PJxVYiPrAp8fYRT+/1Vg4kv2i72fKA/Akw==,iv:8ahr6dISPjNidJAw9T793teFO66UyZEWnHntwENAuVU=,tag:cilN+6ZBe4IdzdYeBL2L2g==,type:str]
-                  from: ENC[AES256_GCM,data:brSoYtpEa2m0WFB0u30=,iv:J89td4Kh8n3WL6RHOIDm/BzvLNQ9Bnwtg8hdpCN4lgI=,tag:qIaB11fJrIDb5845lIPYsQ==,type:str]
-                  smarthost: ENC[AES256_GCM,data:EXAs38ZWAqTnKxxCfJ5oDL2iD8R2PjQy8gouY4HByg==,iv:BnwTHt0SDco2IUnZn0iS2Uim6CHgM7ghl6Niy3fZyC4=,tag:PtYcJfIInF4wyc76Ies5DA==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:uFXCkg==,iv:OvwPPnnPkGxWQJuNS6xalxwvdNOcm0o9E0OBJTLCU8s=,tag:mdYCGF7oME4VX1dmUJIaIQ==,type:bool]
+                - to: ENC[AES256_GCM,data:OtljNPJQQmG1YheMVwr0WVuBdIuxAXDJ5g==,iv:vob2ckoL9aGh0C2KpHckvnP1FS2DGkCZI+iL9LUKraE=,tag:iHR0gTDviGdwI0KTiynnCA==,type:str]
+                  from: ENC[AES256_GCM,data:GVJ7MjNprfGIO+IVcKk=,iv:tRosm/sVeGjOjKB33f5QohgTlnNoaPuUQT2BBr1OoBM=,tag:pS9Dzs9jbM54xqXgghp5/Q==,type:str]
+                  smarthost: ENC[AES256_GCM,data:AQ7B+xo9YW22dEh+SL+RqIFZ2OoLCXRbJ3q3X7SMCw==,iv:J+kTswM9ywMxe9hGZQGn94rB6HO8KY3AM6Ms1ZpWM1o=,tag:dDOHRUkovZw4V51Vz/nRUg==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:OkWXqw==,iv:A7uLS09qpbk9Juqq8WlLUN9d970ZKPX2e0YsuJZ4VfA=,tag:LMDB0u25dokk0LB9aX3vCw==,type:bool]
 prometheus:
     prometheusSpec:
         additionalScrapeConfigs:
-            - job_name: ENC[AES256_GCM,data:eDHg8yXyP/fAIJRedw==,iv:KcHRpTTgxlv5JnjB2j7HQ4mSvwZG3rzW8H9OwxYKC7w=,tag:1FigyYBGdQpWf7j5sdCJHw==,type:str]
-              scrape_interval: ENC[AES256_GCM,data:DtqZ,iv:09CjijguWQ2niYHuxue68CLfgxooUfA9spysFkaMljU=,tag:gOOHfeZnm2ucEwUIZs63Gg==,type:str]
+            - job_name: ENC[AES256_GCM,data:sppGmNMDVnaOPMC9qw==,iv:OA87xOqtjavGj0oKNyPV+s6yeFIRmxzm2AiMUYM4LwU=,tag:d1xC29EJilGUr/bRhVHShA==,type:str]
+              scrape_interval: ENC[AES256_GCM,data:56tt,iv:ZzWK7tqsT9Aiz+jfXtiDKuSy+6scHWNAwYs75vvLMc8=,tag:brtFvjx/UqPlo2vCT+X5/A==,type:str]
               static_configs:
                 - targets:
-                    - ENC[AES256_GCM,data:7Tu7NMSHVI7XSoUJOnQhDSOTmuKCSHyTIZKtF1htHRjN,iv:UL42GDW3+IuTe2ijamJxu02mIRdqCuAByCe0ycLdP04=,tag:oOp/z1x5QjpnX7lzXYZFng==,type:str]
-                    - ENC[AES256_GCM,data:1uobwlWcrgoaVsmB/eVciwujzc92/seb4sULAVEbP/Iu,iv:PMUf4TQHX6NYVoC1lyAJrcbG+zYWmASuNk8CnZDuYLw=,tag:BhGuCnRFnkvtec/j2y4MyQ==,type:str]
-                    - ENC[AES256_GCM,data:2QyZ2AXg4tRLoOKFebN65Ba8rEsNoQrSCZ/GBtIlxo09,iv:XVnx22aews/qgE2Efhlhn7sCPcf+QbhdUheDnKwLhPs=,tag:7KCuBI2xa4x0uSM3bpcrTQ==,type:str]
-                    - ENC[AES256_GCM,data:jvAXmYT/6iKfMaD+bOIj+swWJOsAgoMRezn5rML0d/q1,iv:72qTddUPX+s3TVWnL24/GS5yTkGLbFc1tvNCoXnVmfg=,tag:dNndkB4Ka6khhAjF/2U1Mg==,type:str]
-                    - ENC[AES256_GCM,data:ehFRD5YoHKstR0qNYgYHpOiYvV08cHKPfLVVUNwYcaXt,iv:jWNz/kNvthxv4oeNFWh5KWdi+ZV1ly9ADRTayqOoCSA=,tag:UunlvGIOHSprIoawSswtGA==,type:str]
-                    - ENC[AES256_GCM,data:iGnHXKHdhrHC8tt7dBFyAqOmJPkn8HlJIv7Big==,iv:Na2VejtR+r+nUVEoEHlXhgM6/BU4aJnpTXP1npXSZXc=,tag:2Ayp+GO4waJzwHdDQgI8PA==,type:str]
-                    - ENC[AES256_GCM,data:U9fCRVAu/LQH2DNG+fdvrK39Mhkn7ID4HHMp2g==,iv:78FOp/VVDs1eVmGsyP/n9Jj8HyzY8xaRTOHk4jO0XFw=,tag:4XhjduoXCR5QAxT4ZUiwpw==,type:str]
-                    - ENC[AES256_GCM,data:JbmuAJf81g1zkx03Vuc30TamlBKvr/1d4k7p0A==,iv:KkjSdhAi5zhtF1CaMEjYYg/3vlDnz+/YiTWcnko5N+0=,tag:r5iPtR48dWfYC6w7KFHUSA==,type:str]
-                    - ENC[AES256_GCM,data:3QlkpcAJuimOhZ0ivpqpOqw+RbKkntx3qNz7Hg==,iv:hbVpBxbJ14lX+1+rM7jqQtYh0qRoasW83TZzSv4Nc30=,tag:bYG/VsaupwGGT/5JDtCDvg==,type:str]
-                    - ENC[AES256_GCM,data:8vAK3uURP/Xt5DsA5v/eO9rEY0+0Q1zwEFecAQ==,iv:TTP4/DSGetf//pOn/wqTRcos1lJ33qAhHO3CK6JZAA4=,tag:RszXXrg19y8w+KbtL/Srrg==,type:str]
-                    - ENC[AES256_GCM,data:ooDRvl4p5XklzyBkNhdBvw7JJhXaYLAaxqBNkw==,iv:P69Izx6UMPfWj4ZtBO/O8YJfz70uI8BmEZzQere8UeY=,tag:HyJJFCuixRzJWjXmJA6t5A==,type:str]
-                    - ENC[AES256_GCM,data:tO91jAP6oegm/tB306VwPoz/jDhQ5g==,iv:4yCu22khjGnsWclvoE17mqWTmx+CMEYIOkgdCOjNSn8=,tag:XqAs4xKiOIK708zcly9g9g==,type:str]
-                    - ENC[AES256_GCM,data:/SHU6ejqXP11VWlco6ge,iv:LFuNWkPD5n3e8oCaTPQuBW4eIF40C+/vrJtStaGk+xc=,tag:uVPYVVGU03M0AzvhrpMkRg==,type:str]
-                    - ENC[AES256_GCM,data:W2Gli3sEkrM9MG0vQx28VhY4XEKXnF2BL0iyivSYpJ6blw==,iv:ryTTRYoXZYrjqdYKn/98xC8krtNvsE0/vMXinuTuJiA=,tag:zF69j3pJlASLx3uxXven3w==,type:str]
-                    - ENC[AES256_GCM,data:6Zsdh9HkcTB8SyuCuDdhM5Ju,iv:NIKPWRhSNY4SPxdUT9Sj6+0wLFuy6BOf6/DozdwdTKE=,tag:9iL4yESUEFpeFbpVCVSs1Q==,type:str]
-                    - ENC[AES256_GCM,data:eSA2rNf2bn+mP6JDKUlk9wG8Rh1hSwWalGQ=,iv:89RTdNHEiAWFJcpo0Y7NsCyT6OgFEJpitqPIAcHo/6s=,tag:RB+Fd9uNh/4hoWLpWJs9Kw==,type:str]
+                    - ENC[AES256_GCM,data:eglO99teG46sO2ZclXg9cLJ7TSLim/Ri6a3PCQzFNgM=,iv:UEStRgKvO4aihGnzhrWESEFhqd1HpB4NcPMToe1C7zI=,tag:em9aquWBuQL9qz2KI7N2Gg==,type:str]
+                    - ENC[AES256_GCM,data:zICupXCG4Kf5djd4crKQ0NM3DVam4uONqahrVRrZo9I=,iv:Y387i9V+k3e3xfzYxCpB253BwQBftNnxG/WM29sswBU=,tag:Qs8QwasjSYdknMZ2Kt3XAQ==,type:str]
+                    - ENC[AES256_GCM,data:2Keo/g+G28AERAnI+cG3qsCVP7/FQt7n/gr/fSk15nk=,iv:5tux3e3jE7YGP93j/jwpKdj3dAA2EqLavXH50wOLKo0=,tag:J8XNxibvNLxFtg3rn5ceHw==,type:str]
+                    - ENC[AES256_GCM,data:iueqDiHt9j87o9QK0keIgzMdNeIuGQdQQojjtEDkLAQ=,iv:Oat3x1rN5ZB2tqPq3Hn4sPbEd/M7nAagsiE2IswdyyU=,tag:OJQVHlPyD4oNZtClpeEsLw==,type:str]
+                    - ENC[AES256_GCM,data:kL4vqHx2r562NtLYWSg6/P6YwDxElKvA7ZpWovKtSvc=,iv:VON/fn5xc/bdn1ZMCRl7sR8QgCSVyWXtLqcRJkSJVAQ=,tag:/PvTowzT5XT3bdimtWLJ4Q==,type:str]
+                    - ENC[AES256_GCM,data:NnLlZXasYzCpJYX2dkSB0jOvq94I4QEoEPqG/g==,iv:KhRPkawBc65im0fK53rIPWgSt1B7K0nDis5PZc2QW4k=,tag:zoNq9/e+pOdWZy8BevbdWw==,type:str]
+                    - ENC[AES256_GCM,data:t0y0RYnSu8EPxFf/h+uGSAww2W1GcvlCUPeLZg==,iv:31Li2alLAjzetgI8TjO6BmHrH+IZEG9TExcrrHm+KDk=,tag:N+oOAs3TvAmrHpu/4D9Zdw==,type:str]
+                    - ENC[AES256_GCM,data:QgnWFnl5VEsZLHrM0qwV60PyL+ZWEL2j4WhtUg==,iv:DkNX7B24+aQyj9gEYNH5a6SBiuKPiZ/liu5by9FIfO4=,tag:6YK8HIOAzfMKheP4WX+oGA==,type:str]
+                    - ENC[AES256_GCM,data:mvyzO/JDbMXHmaZyabAUEUQYq8laypVNxV42Kw==,iv:SS+7440w9kWjz15ok6itpjicV5HaKtQdZC1tltLWa3Q=,tag:IrUKU0EMAXUwih1AO0rJRw==,type:str]
+                    - ENC[AES256_GCM,data:Sq1QKVvTYcIC6sDVjdludfzyoS7G3hjxVPD2sA==,iv:XYsRMrJnM4dL2nKypbWewUx87mmKpfHFWX28bBJ0+mY=,tag:rYbfori6a9EOL687G3kZqw==,type:str]
+                    - ENC[AES256_GCM,data:G2SfWaAOptiLelcp1mroQKjQXdnJS7vXZ1iYrg==,iv:W6wLCjzldXN2/uSM5an726eQ8xAN8T1494PnqXh2ETA=,tag:HbI59M1iNBiCaccXcpfZVw==,type:str]
+                    - ENC[AES256_GCM,data:AjKLL0YOnfigAyPrst3YIh4Ajq9hNg==,iv:wfAAiTG+P/ArXif/R53Z07UNIH6DDjJ0vKpPvivXFjE=,tag:gMHg+Eyk5AM4x2Qv6Xuwuw==,type:str]
+                    - ENC[AES256_GCM,data:ThQ+JPCSUUXN8YobL9E5,iv:g6myTY1SnsoTbUA+ERU51cqyR4hJSOhRIbjz8W/MkX0=,tag:FQ/EmCHHsTURfb7lYjt8Dg==,type:str]
+                    - ENC[AES256_GCM,data:mwbvPxHM3rZbeMVX0ZNpw0vfo5BA09+9ckXk2WBS2P/o/w==,iv:DcmWjkO7VgMcnR2DStsQvaaQc+6ec+evtIjyD6ZTEk4=,tag:tX0tBp8dGxqGkpKbq4uZYg==,type:str]
+                    - ENC[AES256_GCM,data:Y/+Jo68jByyLgNRtTtAxduKi,iv:aAjBDkHnMkvMew+19fK5K1UIOjFT5On1dkRBARoKC3w=,tag:ntgT37UQCL5tjCNFenOCLw==,type:str]
+                    - ENC[AES256_GCM,data:Pf+BHw6utIO1F7XcMMuSOgh4bqsqhoTZ2x8=,iv:z8oh6uhjxo0uW8cp1Z5PJinc9vkRjvBy2ULQ7kohmNo=,tag:eg78fQD5JEdmhEm/IC26Zw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -40,14 +40,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDeHdNdHROY25iUXVkN0FQ
-            T2l0T2JHazhtT2VoaGJCNVU0WkR2eEdocng4CkUyL1FxZDhrcTBQN3ZRMXJZTmNt
-            Q2xYZkxKbEtQdFdIcXBSMGtqdVBocXMKLS0tIGEvSW1zNVlvYU9xR2lQWXFnMUVU
-            aE1pR2hDYkk5OUord0d2c0kxWGtqY2MK6szrZX4NoA9t3U+wz11YnbxIeRfmeiGy
-            VE4k9NwNFekuTR5trVh9EX/z1U8YroxZwO+MFJo9+D5aoLkMdPQtdA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmSytGdm96NHBKaXcwZmlQ
+            TVNneWRMaXhiTHVGY0E1b21UQndCajVVSXlFClo3ajFGVjE1TUE3bDR6TktIOFZ2
+            KzVRTkpPTjVIVmZlSzZiSVhXQU1oM3cKLS0tIHB4Q0Q2TkZKN05FSXZHNVJzWGkx
+            Y2xCWmlsaUwycWZrY080bWNESW1jQTQK2afOMqEcKAh8sesrh/iLkL2KkUqrVkhq
+            SXytmW0AcVclucEt4enlls4XoP1vc1IQ6/vbni3gLzQCt+r6Lhx+Ug==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-13T16:14:38Z"
-    mac: ENC[AES256_GCM,data:mEsogSifB7LqZgZt8olNvRU/bpBHmyKN+uZcxais8psw2t/wlrhmWtNO255ZG/Ag5ZuhHzO8M39UxTicsOSLboq7s+MUqvipzB28TcRATcAg7dgmPeUhwAcgx/RmAywHaNFgSAL3dSFNd6rgH7hRLsjW7G3MHxfV6KU7wuRReO8=,iv:J2RAKCWk3nDgBH4WL/h0QDr8nsC5iMkQv1DIKQ6okt0=,tag:ezzcDigsRQ0ngaZY8eyG5Q==,type:str]
+    lastmodified: "2023-01-13T16:43:29Z"
+    mac: ENC[AES256_GCM,data:gH+U4Wz5aKsuMluLHOXhcGgjOHuI74NAoyY3aPA698o9S2o3uwiOZSU5ADXPWNOv4a2cVqtfJnUTr9GZLVD0EvhpgaS+gQbjzhI/X9ALfPF2Jx1RgRSECk2bJeXgk+IR4lDGZiUQW3UBClmg3wpw3Cy8ucGAFsY6a/jpnbaRq7k=,iv:Is84NuMgqbQp7pxZiUe9Ky79AUMUqBkmJiBirMwRlUg=,tag:uBBC3fmDyFuM7C1h6u0IMA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
